# mockerize-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  Readme.md  build.rs
.github/workflows/: release.yml
resources/: Manifest.xml
src/: lib.rs  main.rs  startup.rs
src/cli/: command.rs  mod.rs  new.rs  run.rs  test.rs
src/http/: header.rs  method.rs  mod.rs  response.rs  response_type.rs  route.rs  router.rs  server.rs  serverinfo.rs
tests/: test_commands.rs  test_server.rs
tests/data/: example.server.json  invalid.server.json
