[package]
name = "mockerize-cli"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mockerize-cli"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true # Optimize at link stage, to reduce unused/dead code

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
fs2 = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = "0.12.4"
